--- a/ancestors-know/_app/i/assets/pages/__layout.css
+++ b/ancestors-know/_app/i/assets/pages/__layout.css
@@ -15,8 +15,8 @@
   border: none;
 }
 .lg-outer .lg-item:not(.lg-start-end-progress) {
-  background: url(/_app/i/assets/loading.gif) no-repeat scroll
-    center center transparent;
+  background: url(/_app/i/assets/loading.gif) no-repeat scroll center center
+    transparent;
 }
 @font-face {
   font-family: lg;
@@ -4591,7 +4591,7 @@ footer.svelte-1u4zws #nmai .menu a.svelte-1u4zws:hover {
   color: var(--purple10);
 }
 footer.svelte-1u4zws #nmai .menu a.svelte-1u4zws:after {
-  content: url(../../../images/icons-external-link-alt.svg);
+  content: url(../../../../images/icons-external-link-alt.svg);
   display: inline-block;
   width: 12px;
   padding-left: 5px;
